--- a/css/type.css
+++ b/css/type.css
@@ -62,6 +62,7 @@ li a {
   padding: 14px 16px;
   text-decoration: none;
   border: 2px solid white;
+  transition: color 0.25s ease, border-color 0.25s ease;
 }
 
 li a:hover:not(.active) {
