--- a/css/styleGeneral.css
+++ b/css/styleGeneral.css
@@ -8,7 +8,7 @@ body {
   margin: 0;
 }
 
-ul {
+.header ul {
   z-index: 8;
   list-style-type: none;
   margin: 0;
@@ -21,13 +21,13 @@ ul {
   text-align: center;
 }
 
-li {
+.header li {
   text-align: center;
   display: inline-block;
   margin: 5px;
 }
 
-li a {
+.header li a {
   display: block;
   color: white;
   text-align: center;
@@ -37,17 +37,17 @@ li a {
   transition: color 0.25s ease, border-color 0.25s ease;
 }
 
-:not(.color-grey, .color-red) li a:hover {
+:not(.color-grey, .color-red) .header li a:hover {
   color: #FF2255;
   border-color: #FF2255;
 }
 
-.color-grey li a:hover {
+.color-grey .header li a:hover {
   color: #FF2255;
   border-color: #FF2255;
 }
 
-.color-red li a:hover {
+.color-red .header li a:hover {
   color: black;
   border-color: black;
 }
